// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
{
  "__v_isVNode": true,
  "__v_skip": true,
  "anchor": null,
  "appContext": null,
  "children": [
    "text",
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": {
        "_ctx": null,
        "default": [Function],
      },
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": {
        "key": undefined,
      },
      "ref": null,
      "scopeId": null,
      "shapeFlag": 36,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": {
        "setup": [Function],
      },
    },
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": {
        "_ctx": null,
        "default": [Function],
      },
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": {
        "key": undefined,
      },
      "ref": null,
      "scopeId": null,
      "shapeFlag": 36,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": {
        "name": "",
        "setup": [Function],
      },
    },
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": null,
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": {
        "key": undefined,
        "message": "prop!",
      },
      "ref": null,
      "scopeId": null,
      "shapeFlag": 4,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": {
        "setup": [Function],
      },
    },
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": null,
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": {
        "key": undefined,
      },
      "ref": null,
      "scopeId": null,
      "shapeFlag": 2,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": [Function],
    },
  ],
  "component": null,
  "ctx": null,
  "dirs": null,
  "dynamicChildren": null,
  "dynamicProps": null,
  "el": null,
  "key": null,
  "patchFlag": 0,
  "props": {
    "id": "hi",
    "key": undefined,
  },
  "ref": null,
  "scopeId": null,
  "shapeFlag": 17,
  "slotScopeIds": null,
  "ssContent": null,
  "ssFallback": null,
  "staticCount": 0,
  "suspense": null,
  "target": null,
  "targetAnchor": null,
  "transition": null,
  "type": "main",
}
`;

exports[`basic 2`] = `
{
  "__v_isVNode": true,
  "children": [
    "text",
    {
      "__v_isVNode": true,
      "children": [
        {
          "__v_isVNode": true,
          "children": null,
          "key": null,
          "props": {
            "key": undefined,
          },
          "type": "a",
        },
      ],
      "key": null,
      "props": {
        "id": "setup1",
        "key": undefined,
      },
      "type": "div",
    },
    {
      "__v_isVNode": true,
      "children": [
        {
          "__v_isVNode": true,
          "children": [
            {
              "__v_isVNode": true,
              "children": null,
              "key": null,
              "props": {
                "key": undefined,
              },
              "type": "span",
            },
            {
              "__v_isVNode": true,
              "children": null,
              "key": null,
              "props": {
                "id": "no-setup",
                "key": undefined,
              },
              "type": "div",
            },
          ],
          "key": null,
          "props": {
            "key": undefined,
          },
          "type": "div",
        },
      ],
      "key": null,
      "props": {
        "id": "setup2",
        "key": undefined,
      },
      "type": "div",
    },
    {
      "__v_isVNode": true,
      "children": null,
      "key": null,
      "props": {
        "id": "setup3",
        "key": undefined,
        "message": "prop!",
      },
      "type": "div",
    },
    {
      "__v_isVNode": true,
      "children": null,
      "key": null,
      "props": {
        "id": "no-setup",
        "key": undefined,
      },
      "type": "div",
    },
  ],
  "key": null,
  "props": {
    "id": "hi",
    "key": undefined,
  },
  "type": "main",
}
`;

exports[`basic 3`] = `
{
  "__v_isVNode": true,
  "__v_skip": true,
  "anchor": null,
  "appContext": null,
  "children": [
    "text",
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": [
        {
          "__v_isVNode": true,
          "__v_skip": true,
          "anchor": null,
          "appContext": null,
          "children": null,
          "component": null,
          "ctx": null,
          "dirs": null,
          "dynamicChildren": null,
          "dynamicProps": null,
          "el": null,
          "key": null,
          "patchFlag": 0,
          "props": {
            "key": undefined,
          },
          "ref": null,
          "scopeId": null,
          "shapeFlag": 1,
          "slotScopeIds": null,
          "ssContent": null,
          "ssFallback": null,
          "staticCount": 0,
          "suspense": null,
          "target": null,
          "targetAnchor": null,
          "transition": null,
          "type": "a",
        },
      ],
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": {
        "id": "setup1",
        "key": undefined,
      },
      "ref": null,
      "scopeId": null,
      "shapeFlag": 17,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": "div",
    },
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": [
        {
          "__v_isVNode": true,
          "__v_skip": true,
          "anchor": null,
          "appContext": null,
          "children": [
            {
              "__v_isVNode": true,
              "__v_skip": true,
              "anchor": null,
              "appContext": null,
              "children": null,
              "component": null,
              "ctx": null,
              "dirs": null,
              "dynamicChildren": null,
              "dynamicProps": null,
              "el": null,
              "key": null,
              "patchFlag": 0,
              "props": {
                "key": undefined,
              },
              "ref": null,
              "scopeId": null,
              "shapeFlag": 1,
              "slotScopeIds": null,
              "ssContent": null,
              "ssFallback": null,
              "staticCount": 0,
              "suspense": null,
              "target": null,
              "targetAnchor": null,
              "transition": null,
              "type": "span",
            },
            {
              "__v_isVNode": true,
              "__v_skip": true,
              "anchor": null,
              "appContext": null,
              "children": null,
              "component": null,
              "ctx": null,
              "dirs": null,
              "dynamicChildren": null,
              "dynamicProps": null,
              "el": null,
              "key": null,
              "patchFlag": 0,
              "props": {
                "id": "no-setup",
                "key": undefined,
              },
              "ref": null,
              "scopeId": null,
              "shapeFlag": 1,
              "slotScopeIds": null,
              "ssContent": null,
              "ssFallback": null,
              "staticCount": 0,
              "suspense": null,
              "target": null,
              "targetAnchor": null,
              "transition": null,
              "type": "div",
            },
          ],
          "component": null,
          "ctx": null,
          "dirs": null,
          "dynamicChildren": null,
          "dynamicProps": null,
          "el": null,
          "key": null,
          "patchFlag": 0,
          "props": {
            "key": undefined,
          },
          "ref": null,
          "scopeId": null,
          "shapeFlag": 17,
          "slotScopeIds": null,
          "ssContent": null,
          "ssFallback": null,
          "staticCount": 0,
          "suspense": null,
          "target": null,
          "targetAnchor": null,
          "transition": null,
          "type": "div",
        },
      ],
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": {
        "id": "setup2",
        "key": undefined,
      },
      "ref": null,
      "scopeId": null,
      "shapeFlag": 17,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": "div",
    },
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": null,
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": {
        "id": "setup3",
        "key": undefined,
        "message": "prop!",
      },
      "ref": null,
      "scopeId": null,
      "shapeFlag": 1,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": "div",
    },
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": null,
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": {
        "id": "no-setup",
        "key": undefined,
      },
      "ref": null,
      "scopeId": null,
      "shapeFlag": 1,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": "div",
    },
  ],
  "component": null,
  "ctx": null,
  "dirs": null,
  "dynamicChildren": null,
  "dynamicProps": null,
  "el": null,
  "key": null,
  "patchFlag": 0,
  "props": {
    "id": "hi",
    "key": undefined,
  },
  "ref": null,
  "scopeId": null,
  "shapeFlag": 17,
  "slotScopeIds": null,
  "ssContent": null,
  "ssFallback": null,
  "staticCount": 0,
  "suspense": null,
  "target": null,
  "targetAnchor": null,
  "transition": null,
  "type": "main",
}
`;

exports[`sfc async 1`] = `
{
  "__v_isVNode": true,
  "__v_skip": true,
  "anchor": null,
  "appContext": null,
  "children": [
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": null,
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": {
        "key": undefined,
      },
      "ref": null,
      "scopeId": null,
      "shapeFlag": 4,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": {
        "__file": "/home/hiroshi/code/personal/experiments/vue-server/src/fixtures/async.vue",
        "__name": "async",
        "render": [Function],
        "setup": [Function],
      },
    },
  ],
  "component": null,
  "ctx": null,
  "dirs": null,
  "dynamicChildren": null,
  "dynamicProps": null,
  "el": null,
  "key": null,
  "patchFlag": 0,
  "props": {
    "id": "hi",
    "key": undefined,
  },
  "ref": null,
  "scopeId": null,
  "shapeFlag": 17,
  "slotScopeIds": null,
  "ssContent": null,
  "ssFallback": null,
  "staticCount": 0,
  "suspense": null,
  "target": null,
  "targetAnchor": null,
  "transition": null,
  "type": "main",
}
`;

exports[`sfc import 1`] = `
{
  "__v_isVNode": true,
  "__v_skip": true,
  "anchor": null,
  "appContext": null,
  "children": null,
  "component": null,
  "ctx": null,
  "dirs": null,
  "dynamicChildren": null,
  "dynamicProps": null,
  "el": null,
  "key": null,
  "patchFlag": 0,
  "props": {
    "key": undefined,
  },
  "ref": null,
  "scopeId": null,
  "shapeFlag": 4,
  "slotScopeIds": null,
  "ssContent": null,
  "ssFallback": null,
  "staticCount": 0,
  "suspense": null,
  "target": null,
  "targetAnchor": null,
  "transition": null,
  "type": {
    "__file": "/home/hiroshi/code/personal/experiments/vue-server/src/fixtures/import.vue",
    "__name": "import",
    "render": [Function],
    "setup": [Function],
  },
}
`;

exports[`sfc props 1`] = `
{
  "__v_isVNode": true,
  "__v_skip": true,
  "anchor": null,
  "appContext": null,
  "children": null,
  "component": null,
  "ctx": null,
  "dirs": null,
  "dynamicChildren": null,
  "dynamicProps": null,
  "el": null,
  "key": null,
  "patchFlag": 0,
  "props": {
    "key": undefined,
    "message": "prop!",
  },
  "ref": null,
  "scopeId": null,
  "shapeFlag": 4,
  "slotScopeIds": null,
  "ssContent": null,
  "ssFallback": null,
  "staticCount": 0,
  "suspense": null,
  "target": null,
  "targetAnchor": null,
  "transition": null,
  "type": {
    "__file": "/home/hiroshi/code/personal/experiments/vue-server/src/fixtures/props.vue",
    "__name": "props",
    "props": {
      "message": {
        "required": true,
        "type": [Function],
      },
    },
    "render": [Function],
    "setup": [Function],
  },
}
`;

exports[`sfc setup 1`] = `
{
  "__v_isVNode": true,
  "__v_skip": true,
  "anchor": null,
  "appContext": null,
  "children": [
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": null,
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": {
        "key": undefined,
      },
      "ref": null,
      "scopeId": null,
      "shapeFlag": 4,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": {
        "__file": "/home/hiroshi/code/personal/experiments/vue-server/src/fixtures/setup.vue",
        "__name": "setup",
        "render": [Function],
        "setup": [Function],
      },
    },
  ],
  "component": null,
  "ctx": null,
  "dirs": null,
  "dynamicChildren": null,
  "dynamicProps": null,
  "el": null,
  "key": null,
  "patchFlag": 0,
  "props": {
    "id": "hi",
    "key": undefined,
  },
  "ref": null,
  "scopeId": null,
  "shapeFlag": 17,
  "slotScopeIds": null,
  "ssContent": null,
  "ssFallback": null,
  "staticCount": 0,
  "suspense": null,
  "target": null,
  "targetAnchor": null,
  "transition": null,
  "type": "main",
}
`;

exports[`sfc slot basic 1`] = `
{
  "__v_isVNode": true,
  "__v_skip": true,
  "anchor": null,
  "appContext": null,
  "children": {
    "_ctx": null,
    "default": [Function],
    "header": [Function],
  },
  "component": null,
  "ctx": null,
  "dirs": null,
  "dynamicChildren": null,
  "dynamicProps": null,
  "el": null,
  "key": null,
  "patchFlag": 0,
  "props": {
    "key": undefined,
  },
  "ref": null,
  "scopeId": null,
  "shapeFlag": 36,
  "slotScopeIds": null,
  "ssContent": null,
  "ssFallback": null,
  "staticCount": 0,
  "suspense": null,
  "target": null,
  "targetAnchor": null,
  "transition": null,
  "type": {
    "__file": "/home/hiroshi/code/personal/experiments/vue-server/src/fixtures/slot.vue",
    "render": [Function],
  },
}
`;

exports[`sfc slot fallback 1`] = `
{
  "__v_isVNode": true,
  "__v_skip": true,
  "anchor": null,
  "appContext": null,
  "children": null,
  "component": null,
  "ctx": null,
  "dirs": null,
  "dynamicChildren": null,
  "dynamicProps": null,
  "el": null,
  "key": null,
  "patchFlag": 0,
  "props": {
    "key": undefined,
  },
  "ref": null,
  "scopeId": null,
  "shapeFlag": 4,
  "slotScopeIds": null,
  "ssContent": null,
  "ssFallback": null,
  "staticCount": 0,
  "suspense": null,
  "target": null,
  "targetAnchor": null,
  "transition": null,
  "type": {
    "__file": "/home/hiroshi/code/personal/experiments/vue-server/src/fixtures/slot.vue",
    "render": [Function],
  },
}
`;

exports[`sfc template 1`] = `
{
  "__v_isVNode": true,
  "__v_skip": true,
  "anchor": null,
  "appContext": null,
  "children": [
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": null,
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": {
        "key": undefined,
      },
      "ref": null,
      "scopeId": null,
      "shapeFlag": 4,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": {
        "__file": "/home/hiroshi/code/personal/experiments/vue-server/src/fixtures/basic.vue",
        "render": [Function],
      },
    },
  ],
  "component": null,
  "ctx": null,
  "dirs": null,
  "dynamicChildren": null,
  "dynamicProps": null,
  "el": null,
  "key": null,
  "patchFlag": 0,
  "props": {
    "id": "hi",
    "key": undefined,
  },
  "ref": null,
  "scopeId": null,
  "shapeFlag": 17,
  "slotScopeIds": null,
  "ssContent": null,
  "ssFallback": null,
  "staticCount": 0,
  "suspense": null,
  "target": null,
  "targetAnchor": null,
  "transition": null,
  "type": "main",
}
`;
